feat/swagger docs (#13)
* swagger docs endpoint

* docs for users, auth, ping controllers

* city's handlers docs

* univ's handlers docs

* teacher's handlers docs

* review's handlers docs

* format univ's swagger tags
