# internal/handlers/users.go
@@ -8,6 +8,14 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+//	@Summary	GetUser
+//	@Security	Token
+//	@Tags		users
+//	@Accept		json
+//	@Produce	json
+//	@Success	200	{object}	model.User
+//	@Failure	400	{object}	response.Error
+//	@Router		/logged/users/get [get]
 func (h *Handler) GetUser(c *gin.Context) {
 	userId := getUserId(c)
 	user, err := h.services.UsersService.GetUserById(userId)
@@ -19,6 +27,14 @@ func (h *Handler) GetUser(c *gin.Context) {
 	c.JSON(http.StatusAccepted, user)
 }
 
+//	@Summary	DeleteUser
+//	@Security	Token
+//	@Tags		users
+//	@Accept		json
+//	@Produce	json
+//	@Success	200	{object}	response.Success
+//	@Failure	400	{object}	response.Error
+//	@Router		/logged/users/delete [delete]
 func (h *Handler) DeleteUser(c *gin.Context) {
 	userId := getUserId(c)
 	if err := h.services.UsersService.DeleteUser(userId); err != nil {
@@ -28,6 +44,16 @@ func (h *Handler) DeleteUser(c *gin.Context) {
 	response.NewSuccessResponse(c, http.StatusAccepted, "user was deleted successfully")
 }
 
+//	@Summary	UpdateUser
+//	@Security	Token
+//	@Tags		users
+//	@Accept		json
+//	@Produce	json
+//	@Param		input	body		model.User	true	"user data"
+//
+//	@Success	200		{object}	model.User
+//	@Failure	400		{object}	response.Error
+//	@Router		/logged/users/update [put]
 func (h *Handler) UpdateUser(c *gin.Context) {
 	var user model.User
 
@@ -45,6 +71,14 @@ func (h *Handler) UpdateUser(c *gin.Context) {
 	c.JSON(http.StatusAccepted, user)
 }
 
+//	@Summary	ListUsers
+//	@Security	Token
+//	@Tags		users
+//	@Accept		json
+//	@Produce	json
+//	@Success	200	{object}	[]model.User
+//	@Failure	400	{object}	response.Error
+//	@Router		/logged/users/all [get]
 func (h *Handler) ListUsers(c *gin.Context) {
 	// TODO:
 	// add permission
